--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
 
   english_words: ^4.0.0
   provider: ^6.0.0
+  web_socket_channel: ^3.0.1
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
